main-menu (0.047) UNRELEASED; urgency=low

  * Kęstutis Biliūnas
    - Update Lithuanian translation (lt.po).

 -- Denis Barbier <barbier@debian.org>  Thu, 23 Oct 2003 22:43:05 +0200

main-menu (0.046) unstable; urgency=low

  * Tommi Vainikainen
    - Add Finnish (fi.po) translation
  * Matt Kraai
    - Do not default to a package that provides a virtual package that is
      also provided by a package that is already installed (closes:
      #216787).
    - Remove redundant build-dependency on dpkg-dev (>= 1.7.0).
    - Add self to uploaders.

 -- Matt Kraai <kraai@debian.org>  Mon, 20 Oct 2003 22:37:52 -0700

main-menu (0.045) unstable; urgency=low

  * Christian Perrier
    - Improve French translation.
  * Matt Kraai
    - Set the title before configuring a package (Closes: #213725).
  * Kęstutis Biliūnas
    - Add Lithuanian (lt.po) translation.
  * Claus Hindsgaul
    - Actually include Danish translation (da.po) to CVS.
  * Petter Reinholdtsen
    - Removed Tollef Fog Heen as uploader.  He haven't touched the package
      for a long time.
    - Added myself as uploader.

 -- Petter Reinholdtsen <pere@debian.org>  Sun, 19 Oct 2003 18:05:30 +0200

main-menu (0.044) unstable; urgency=low

  * Claus Hindsgaul
    - Update da (Danish) translation.
  * Alastair McKinstry
    - Depend on libdebconfclient-dev > 0.47, for fixed debconf_capb() macro.
  * Jure Cuhalev
    - New  Slovenian translation. Closes: #214357.
  * Petter Reinholdtsen
    - Versioned depend against virtual package libdebconfclient-dev do not
      work.  Depend on libdebconfclient0-dev instead.

 -- Joey Hess <joeyh@debian.org>  Sun, 12 Oct 2003 21:31:18 +0100

main-menu (0.043) unstable; urgency=low

  * Javier Fernandez-Sanguino:
    - Updated spanish translation
  * Alastair McKinstry
    - Move to new debconf macros.
  * Petter Reinholdtsen
    - Update ru.po, thanks to patch from Ilgiz Kalmetev (Closes: #214357)

 -- Petter Reinholdtsen <pere@debian.org>  Sun, 12 Oct 2003 19:09:04 +0200
